<resources>
    <string name="app_name">Etaxi</string>
    <string name="action_sign_in_short">Regoignez-nous</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de pass tres court, entrer un minimum de 6 caracteres!</string>
    <string name="auth_failed">Authentification echoue verifier votre email et mot de pass</string>
    <string name="change_email">Changer Email</string>
    <string name="change_password">Changer Password</string>
    <string name="send_password_reset_email">Envoyer email de redefinition du mot de pass</string>
    <string name="remove_user">Supprimer l\'utilisateur</string>
    <string name="new_pass">Nouveau mot de pass</string>
    <string name="title_activity_profile">ETaxi</string>
    <string name="title_activity_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de pass</string>
    <string name="hint_name">Nom Complet</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Pas un membre? Regoignez-nous sur ETaxi !</string>
    <string name="btn_link_to_login">Deja un membre. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de pass oublie?</string>
    <string name="btn_reset_password">Redefinir mot de pass</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">Nouveau email</string>
    <string name="btn_change">Changer</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Logout</string>
    <string name="lbl_forgot_password">Mot de pass oublie?</string>
    <string name="forgot_password_msg">On a besoin de votre email pour redefinir votre mot de pass.</string>
</resources>
