<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:ems="10"
        android:hint="@string/hint_password"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password"
        android:background="@null"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_below="@+id/btn_reset_password"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_below="@+id/btn_signup"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
