<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/hint_password"
        android:imeActionId="@id/login"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:textColor="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/sign_up_button"
        android:background="@null"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_to_login"
        android:background="@null"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_reset_password"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>